# dpb_source

./: CMakeLists.txt  screw_button.psd
content/: CMakeLists.txt
content/production/: CMakeLists.txt  GameInfo.txt  GameInfo.txt.in  demoheader.tmp  detail.vbsp  dpb.fgd  icon.tga  maplist.txt  modelsounds.cache  motd.txt  motd.txt.in  scene.cache  serverconfig.vdf
content/production/DownloadLists/: dpb_begin.lst
content/production/cfg/: config.cfg  config_default.cfg  game.cfg  listenserver.cfg  settings.scr  valve.rc
content/production/maps/: dpb_begin.bsp  dpb_begin.bsp.ztmp  dpb_city.bsp
content/production/models/: paintball.dx80.vtx  paintball.dx90.vtx  paintball.mdl  paintball.phy  paintball.sw.vtx  paintball.vvd  pyramid_inflatable.dx80.vtx  pyramid_inflatable.dx90.vtx  pyramid_inflatable.mdl  pyramid_inflatable.phy  pyramid_inflatable.sw.vtx  pyramid_inflatable.vvd  rygInflatable_pyramid.dx80.vtx  rygInflatable_pyramid.dx90.vtx  rygInflatable_pyramid.phy  rygInflatable_pyramid.sw.vtx  rygPyramid.dx80.vtx  rygPyramid.dx90.vtx  rygPyramid.phy  rygPyramid.sw.vtx  ryginflatable_pyramid.mdl  ryginflatable_pyramid.vvd  rygpyramid.mdl  rygpyramid.vvd  temp.dx80.vtx  temp.dx90.vtx  temp.mdl  temp.phy  temp.sw.vtx  temp.vvd  testbox.dx80.vtx  testbox.dx90.vtx  testbox.mdl  testbox.phy  testbox.sw.vtx  testbox.vvd
content/production/resource/: GameMenu.res  (+5 more)
content/source/: ReadMe.txt  splat.abr
doc/: DPB Manual.odt  DPB software needed.txt  Developing DPB.rtf  Digital Paintball Concept.rtf  Digital Paintball Proposal.rtf  Functional Specification.doc  Functional Specification.rtf  SOULSTREWN STUDIOS ELECTRONIC ADVERTISING AGREEMENT.doc  SoBe Marketing Letter.rtf  Training Voice Dialogue.doc  _thedoc_.odt  animation_chart.psd  cover letter.rtf  designdoc.rtf  guidelines.html  guidelines.odt  materials.txt  player animations.txt  proposal.rtf  proposal.xml  proposal2.rtf  sound.txt
src/: CMakeLists.txt  Digital Paintball Source (VS 2003).sln  Digital Paintball Source (VS 2005).sln
src/cl_dll/: ArenaPanel.cpp  CMakeLists.txt  ChangeGunPanel.h  ChangeSkinPanel.cpp  ChangeSkinPanel.h  ChangeTeamPanel.cpp  HudPanel.cpp  c_baseanimating.cpp  c_basecombatweapon.cpp  c_baseentity.cpp  c_baseentity.h  c_baseplayer.cpp  c_baseplayer.h  c_baseviewmodel.cpp  c_breakableprop.cpp  c_multiarena.cpp  c_multiarena.h  c_playerlocaldata.h  c_playerresource.cpp  c_playerresource.h  c_props.cpp  c_soundscape.cpp  c_te_legacytempents.cpp  cdll_client_int.cpp  cdll_util.cpp  cdll_util.h  client_scratch-2003.vcproj  client_scratch-2005.vcproj  clientleafsystem.cpp  clientmode_shared.cpp  death.cpp  hltvcamera.cpp  hltvcamera.h  hud_basechat.cpp  hud_basechat.h  hud_voicestatus.cpp  hudpanel.h  iclientmode.h  in_main.cpp  in_mouse.cpp  (+7 more)
src/cl_dll/game_controls/: ClientScoreBoardDialog.cpp  MapOverview.cpp  SpectatorGUI.cpp  baseviewport.cpp  baseviewport.h  buymenu.cpp  classmenu.cpp  clientscoreboarddialog.h  mapoverview.h  spectatorgui.h  teammenu.cpp  vgui_TeamFortressViewport.cpp  vguitextwindow.cpp
src/cl_dll/hl2mp/: c_hl2mp_player.cpp
src/cl_dll/sdk/: ChangeGunPanel.cpp  ChangeTeamPanel.h  HudPanel.cpp  arenapanel.h  c_multiarena.cpp  c_multiarena.h  c_paintball.cpp  c_paintball.h  c_sdk_player.cpp  c_weapon_paintball.cpp  sdk_fx_impacts.cpp  sdk_hud_ammo.cpp  sdk_hud_chat.cpp  sdk_hud_message.cpp
src/dlls/: CMakeLists.txt  EventLog.cpp  ai_activity.cpp  ai_basenpc.cpp  basecombatcharacter.cpp  basecombatweapon.cpp  baseentity.cpp  baseentity.h  client.cpp  doors.cpp  game.cpp  game.h  gameinterface.cpp  hltvdirector.cpp  hltvdirector.h  item_world.cpp  multiarena.cpp  multiarena.h  nav_area.cpp  nav_edit.cpp  nav_generate.cpp  nav_ladder.cpp  nav_ladder.h  nav_mesh.cpp  physics.cpp  physics_impact_damage.cpp  player.cpp  player.h  player_command.cpp  player_lagcompensation.cpp  player_resource.cpp  player_resource.h  playerlocaldata.h  point_devshot_camera.cpp  props.cpp  recipientfilter.cpp  recipientfilter.h  sendproxy.cpp  server_scratch-2003.vcproj  server_scratch-2005.vcproj  (+10 more)
src/dlls/hl2_dll/: hl2_player.cpp  prop_combine_ball.cpp
src/dlls/hl2mp_dll/: hl2mp_client.cpp  hl2mp_player.cpp  hl2mp_player.h
src/dlls/sdk/: multiarena.cpp  multiarena.h  paintball.cpp  paintball.h  sdk_bot_temp.cpp  sdk_client.cpp  sdk_player.cpp  sdk_player.h  sdk_team.cpp  sdk_team.h  sdk_vehicle_jeep.cpp  sv.cpp  sv.h  sv_soap.cpp
src/game_shared/: activitylist.cpp  ai_activity.h  base_playeranimstate.cpp  basecombatweapon_shared.cpp  baseentity_shared.cpp  baseplayer_shared.cpp  baseviewmodel_shared.cpp  baseviewmodel_shared.h  config.h.in  decals.cpp  gamemovement.cpp  gamemovement.h  gamerules.cpp  gamerules.h  gamevars_shared.cpp  igamemovement.h  in_buttons.h  movevars_shared.cpp  movevars_shared.h  multiarena_shared.h  multiplay_gamerules.cpp  multiplay_gamerules.h  obstacle_pushaway.cpp  obstacle_pushaway.h  props_shared.cpp  shareddefs.h  singleplay_gamerules.cpp  singleplay_gamerules.h  teamplay_gamerules.cpp  teamplay_gamerules.h  usercmd.cpp  usercmd.h  util_shared.cpp  util_shared.h  voice_status.cpp  voice_status.h  weapon_parse.cpp  weapon_parse.h
src/public/: IGameUIFuncs.h  basehandle.h  filesystem_init.cpp  filesystem_init.h
src/sdkshaders/: build_sample_shaders.bat  game_shader_generic_sample.vcproj  sdk_lightmap.cpp  sdk_particle.cpp  sdk_postprocess.cpp  sdk_shaders.txt
src/soulvision/: CMakeLists.txt
src/soulvision/sh/: CMakeLists.txt  SV.wsdl  cd.bat  configfile.cpp  configfile.h  logger.cpp  logger.h  mmgr.cpp  mmgr.h  nommgr.h  runtime.h  stdsoap2.cpp  stdsoap2.h  sv_shared.h  sv_util.cpp  sv_util.h
src/soulvision/sv/: CMakeLists.txt  data.h  database.cpp  database.h  db_mysql.cpp  db_mysql.h  db_mysql_columns.h.in  db_mysqldata.cpp  db_mysqldata.h  main.cpp  main.h  resetdb.bat  scheduler.cpp  scheduler.h  schema.sql.in  server_default.cfg  soap.cpp  soap.h  testdata.sql.in  userresetdb.bat
src/tier1/: CMakeLists.txt  stringpool.cpp
src/vgui2/: CMakeLists.txt
src/vgui2/controls/: HTML.cpp  Label.cpp  RenderImagePanel.cpp  vgui_controls-2003.vcproj
(+2545 files in other folders)
