SET( CLIENT_SRCS
	alphamaterialproxy.cpp
	animatedentitytextureproxy.cpp
	animatedoffsettextureproxy.cpp
	animatedtextureproxy.cpp
	baseanimatedtextureproxy.cpp
	beamdraw.cpp
	bone_merge_cache.cpp
	c_ai_basehumanoid.cpp
	c_ai_basenpc.cpp
	c_baseanimating.cpp
	c_baseanimatingoverlay.cpp
	c_basecombatcharacter.cpp
	c_basecombatweapon.cpp
	c_basedoor.cpp
	c_baseentity.cpp
	c_baseflex.cpp
	c_baseplayer.cpp
	c_basetempentity.cpp
	c_baseviewmodel.cpp
	c_breakableprop.cpp
	c_dynamiclight.cpp
	c_effects.cpp
	c_entitydissolve.cpp
	c_entityparticletrail.cpp
	c_env_particlescript.cpp
	c_env_screenoverlay.cpp
	c_fire_smoke.cpp
	c_func_areaportalwindow.cpp
	c_func_breakablesurf.cpp
	c_func_conveyor.cpp
	c_func_dust.cpp
	c_func_lod.cpp
	c_func_occluder.cpp
	c_func_smokevolume.cpp
	c_func_tracktrain.cpp
	c_gib.cpp
	c_hairball.cpp
	c_impact_effects.cpp
	c_lightglow.cpp
	c_materialmodifycontrol.cpp
	c_movie_explosion.cpp
	c_multiarena.cpp
	c_particle_fire.cpp
	c_particle_smokegrenade.cpp
	c_physbox.cpp
	c_physicsprop.cpp
	c_physmagnet.cpp
	c_pixel_visibility.cpp
	c_plasma.cpp
	c_playerresource.cpp
	c_point_camera.cpp
	c_prop_vehicle.cpp
	c_props.cpp
	c_ragdoll_manager.cpp
	c_recipientfilter.cpp
	c_rope.cpp
	c_shadowcontrol.cpp
	c_smoke_trail.cpp
	c_smokestack.cpp
	c_soundscape.cpp
	c_spotlight_end.cpp
	c_sprite.cpp
	c_steamjet.cpp
	c_stickybolt.cpp
	c_sun.cpp
	c_te.cpp
	c_te_armorricochet.cpp
	c_te_basebeam.cpp
	c_te_beamentpoint.cpp
	c_te_beaments.cpp
	c_te_beamfollow.cpp
	c_te_beamlaser.cpp
	c_te_beampoints.cpp
	c_te_beamring.cpp
	c_te_beamringpoint.cpp
	c_te_beamspline.cpp
	c_te_bloodsprite.cpp
	c_te_bloodstream.cpp
	c_te_breakmodel.cpp
	c_te_bspdecal.cpp
	c_te_bubbles.cpp
	c_te_bubbletrail.cpp
	c_te_decal.cpp
	c_te_dynamiclight.cpp
	c_te_effect_dispatch.cpp
	c_te_energysplash.cpp
	c_te_explosion.cpp
	c_te_fizz.cpp
	c_te_footprint.cpp
	c_te_glassshatter.cpp
	c_te_glowsprite.cpp
	c_te_impact.cpp
	c_te_killplayerattachments.cpp
	c_te_largefunnel.cpp
	c_te_legacytempents.cpp
	c_te_muzzleflash.cpp
	c_te_particlesystem.cpp
	c_te_physicsprop.cpp
	c_te_playerdecal.cpp
	c_te_projecteddecal.cpp
	c_te_showline.cpp
	c_te_smoke.cpp
	c_te_sparks.cpp
	c_te_sprite.cpp
	c_te_spritespray.cpp
	c_te_worlddecal.cpp
	c_team.cpp
	c_tesla.cpp
	c_test_proxytoggle.cpp
	c_testtraceline.cpp
	c_tracer.cpp
	c_user_message_register.cpp
	c_vehicle_jeep.cpp
	c_vguiscreen.cpp
	c_world.cpp
	camomaterialproxy.cpp
	cdll_client_int.cpp
	cdll_util.cpp
	cl_mat_stub.cpp
	classmap.cpp
	client_thinklist.cpp
	clienteffectprecachesystem.cpp
	cliententitylist.cpp
	clientleafsystem.cpp
	clientmode_shared.cpp
	clientshadowmgr.cpp
	clientsideeffects.cpp
	clientsideeffects_test.cpp
	detailobjectsystem.cpp
	dummyproxy.cpp
	effectsclient.cpp
	flashlighteffect.cpp
	functionproxy.cpp
	fx.cpp
	fx_blood.cpp
	fx_cube.cpp
	fx_discreetline.cpp
	fx_envelope.cpp
	fx_explosion.cpp
	fx_fleck.cpp
	fx_impact.cpp
	fx_line.cpp
	fx_quad.cpp
	fx_shelleject.cpp
	fx_sparks.cpp
	fx_staticline.cpp
	fx_tracer.cpp
	fx_trail.cpp
	fx_water.cpp
	gametrace_client.cpp
	geiger.cpp
	glow_overlay.cpp
	history_resource.cpp
	hltvcamera.cpp
	hud.cpp
	hud_animationinfo.cpp
	hud_basechat.cpp
	hud_basetimer.cpp
	hud_bitmapnumericdisplay.cpp
	hud_closecaption.cpp
	hud_crosshair.cpp
	hud_element_helper.cpp
	hud_hintdisplay.cpp
	hud_msg.cpp
	hud_numericdisplay.cpp
	hud_pdump.cpp
	hud_redraw.cpp
	hud_vehicle.cpp
	hud_voicestatus.cpp
	hud_weapon.cpp
	in_camera.cpp
	in_joystick.cpp
	in_main.cpp
	in_mouse.cpp
	initializer.cpp
	interpolatedvar.cpp
	lampbeamproxy.cpp
	lamphaloproxy.cpp
	mathproxy.cpp
	matrixproxy.cpp
	menu.cpp
	message.cpp
	movehelper_client.cpp
	panelmetaclassmgr.cpp
	particle_collision.cpp
	particle_litsmokeemitter.cpp
	particle_proxies.cpp
	particle_simple3d.cpp
	particlemgr.cpp
	particles_attractor.cpp
	particles_ez.cpp
	particles_localspace.cpp
	particles_simple.cpp
	particlesphererenderer.cpp
	perfvisualbenchmark.cpp
	physics.cpp
	physics_main_client.cpp
	physpropclientside.cpp
	playerandobjectenumerator.cpp
	prediction.cpp
	proxyentity.cpp
	proxyhealth.cpp
	proxyplayer.cpp
	proxypupil.cpp
	ragdoll.cpp
	recvproxy.cpp
	rendertexture.cpp
	simple_keys.cpp
	smoke_fog_overlay.cpp
	splinepatch.cpp
	spritemodel.cpp
	stdafx.cpp
	text_message.cpp
	texturescrollmaterialproxy.cpp
	timematerialproxy.cpp
	toggletextureproxy.cpp
	train.cpp
	vgui_basepanel.cpp
	vgui_bitmapbutton.cpp
	vgui_bitmapimage.cpp
	vgui_bitmappanel.cpp
	vgui_centerstringpanel.cpp
	vgui_consolepanel.cpp
	vgui_debugoverlaypanel.cpp
	vgui_fpspanel.cpp
	vgui_game_viewport.cpp
	vgui_grid.cpp
	vgui_int.cpp
	vgui_loadingdiscpanel.cpp
	vgui_messagechars.cpp
	vgui_netgraphpanel.cpp
	vgui_textmessagepanel.cpp
	view.cpp
	view_beams.cpp
	view_effects.cpp
	view_scene.cpp
	viewconeimage.cpp
	warp_overlay.cpp
	waterlodmaterialproxy.cpp
	weapon_selection.cpp
	weapons_resource.cpp
	worlddimsproxy.cpp
)

SET( CLIENT_SDK_SRCS
	sdk/c_sdk_env_sparkler.cpp
	sdk/c_sdk_player.cpp
	sdk/c_te_firebullets.cpp
	sdk/c_weapon_paintball.cpp
	sdk/clientmode_sdk.cpp
	sdk/sdk_fx_impacts.cpp
	sdk/sdk_hud_ammo.cpp
	sdk/sdk_hud_chat.cpp
	sdk/sdk_hud_message.cpp
	sdk/sdk_hud_weaponselection.cpp
	sdk/sdk_in_main.cpp
	sdk/sdk_prediction.cpp
)

SET( CLIENT_SDK_VGUI_SRCS
	sdk/vgui/sdkviewport.cpp
	sdk/vgui/vgui_rootpanel_sdk.cpp
)

SET( CLIENT_GAME_CONTROLS_SRCS
	game_controls/buymenu.cpp
	game_controls/buysubmenu.cpp
	game_controls/classmenu.cpp
	game_controls/clientscoreboarddialog.cpp
	game_controls/commandmenu.cpp
	game_controls/mapoverview.cpp
	game_controls/navprogress.cpp
	game_controls/spectatorgui.cpp
	game_controls/teammenu.cpp
	game_controls/vgui_teamfortressviewport.cpp
	game_controls/vguitextwindow.cpp
)

SET( COMMON_SRCS
	../common/randoverride.cpp
)

SET( GAME_SHARED_SRCS
	../game_shared/activitylist.cpp
	../game_shared/ammodef.cpp
	../game_shared/animation.cpp
	../game_shared/base_playeranimstate.cpp
	../game_shared/basecombatcharacter_shared.cpp
	../game_shared/basecombatweapon_shared.cpp
	../game_shared/baseentity_shared.cpp
	../game_shared/basegrenade_shared.cpp
	../game_shared/baseparticleentity.cpp
	../game_shared/baseplayer_shared.cpp
	../game_shared/baseviewmodel_shared.cpp
	../game_shared/beam_shared.cpp
	../game_shared/collisionproperty.cpp
	../game_shared/death_pose.cpp
	../game_shared/decals.cpp
	../game_shared/effect_dispatch_data.cpp
	../game_shared/ehandle.cpp
	../game_shared/entitylist_base.cpp
	../game_shared/entityparticletrail_shared.cpp
	../game_shared/env_detail_controller.cpp
	../game_shared/env_wind_shared.cpp
	../game_shared/eventlist.cpp
	../game_shared/func_ladder.cpp
	../game_shared/gamemovement.cpp
	../game_shared/gamerules.cpp
	../game_shared/gamerules_register.cpp
	../game_shared/gamestringpool.cpp
	../game_shared/gamevars_shared.cpp
	../game_shared/igamesystem.cpp
	../game_shared/interval.cpp
	../game_shared/mapentities_shared.cpp
	../game_shared/movevars_shared.cpp
	../game_shared/multiplay_gamerules.cpp
	../game_shared/physics_main_shared.cpp
	../game_shared/physics_saverestore.cpp
	../game_shared/physics_shared.cpp
	../game_shared/precache_register.cpp
	../game_shared/predictableid.cpp
	../game_shared/predictioncopy.cpp
	../game_shared/predicted_viewmodel.cpp
	../game_shared/props_shared.cpp
	../game_shared/ragdoll_shared.cpp
	../game_shared/rope_helpers.cpp
	../game_shared/saverestore.cpp
	../game_shared/sheetsimulator.cpp
	../game_shared/singleplay_gamerules.cpp
	../game_shared/soundemittersystem.cpp
	../game_shared/soundenvelope.cpp
	../game_shared/sprite.cpp
	../game_shared/spritetrail.cpp
	../game_shared/studio_shared.cpp
	../game_shared/takedamageinfo.cpp
	../game_shared/test_ehandle.cpp
	../game_shared/usercmd.cpp
	../game_shared/usermessages.cpp
	../game_shared/util_shared.cpp
	../game_shared/voice_banmgr.cpp
	../game_shared/voice_status.cpp
	../game_shared/weapon_parse.cpp
)

SET( GAME_SHARED_SDK_SRCS
	../game_shared/sdk/sdk_basegrenade_projectile.cpp
	../game_shared/sdk/sdk_fx_shared.cpp
	../game_shared/sdk/sdk_gamemovement.cpp
	../game_shared/sdk/sdk_gamerules.cpp
	../game_shared/sdk/sdk_player_shared.cpp
	../game_shared/sdk/sdk_playeranimstate.cpp
	../game_shared/sdk/sdk_usermessages.cpp
	../game_shared/sdk/sdk_weapon_parse.cpp
	../game_shared/sdk/weapon_basesdkgrenade.cpp
	../game_shared/sdk/weapon_grenade.cpp
	../game_shared/sdk/weapon_marker.cpp
	../game_shared/sdk/weapon_sdkbase.cpp
)

SET( PUBLIC_SRCS
	../public/bone_accessor.cpp
	../public/bone_setup.cpp
	../public/client_class.cpp
	../public/collisionutils.cpp
	../public/crtmemdebug.cpp
	../public/dt_recv.cpp
	../public/dt_utlvector_common.cpp
	../public/dt_utlvector_recv.cpp
	../public/filesystem_helpers.cpp
	../public/icekey.cpp
	../public/imageloader.cpp
	../public/mathlib.cpp
	../public/networkvar.cpp
	../public/rope_physics.cpp
	../public/scratchpad3d.cpp
	../public/scratchpadutils.cpp
	../public/sentence.cpp
	../public/simple_physics.cpp
	../public/soundparametersinternal.cpp
	../public/stringregistry.cpp
	../public/studio.cpp
	../public/tgaloader.cpp
	../public/tgawriter.cpp
	../public/vallocator.cpp
	../public/vmatrix.cpp
)

SET( MATERIALS_SRCS
	../public/materialsystem/MaterialSystemUtil.cpp
)

SET( TIER0_SRCS
	../public/tier0/memoverride.cpp
)

SET(CLIENT_BUILD_SRCS
	${CLIENT_SDK_SRCS}
	${CLIENT_SDK_VGUI_SRCS}
	${GAME_SHARED_SDK_SRCS}
)	

SET(CLIENT_BUILD_INC_CL_DLL ${DPB_SOURCE_DIR}/src/cl_dll/sdk )
SET(CLIENT_BUILD_INC_GAME_SHARED ${DPB_SOURCE_DIR}/src/game_shared/sdk )

SET( CLIENT_ALL_SRCS
	${CLIENT_SRCS}
	${CLIENT_HL2_HUD_SRCS}
	${CLIENT_GAME_CONTROLS_SRCS}
	${GAME_SHARED_SRCS}
	${PUBLIC_SRCS}
	${TIER0_SRCS}
	${MATERIALS_SRCS}
	${CLIENT_BUILD_SRCS}
	${COMMON_SRCS}
)

SOURCE_GROUP(client			FILES ${CLIENT_SRCS} ${CLIENT_SDK_SRCS})
SOURCE_GROUP(common			FILES ${COMMON_SRCS})
SOURCE_GROUP(game_controls	FILES ${CLIENT_GAME_CONTROLS_SRCS})
SOURCE_GROUP(game_shared	FILES ${GAME_SHARED_SRCS} ${GAME_SHARED_SDK_SRCS})
SOURCE_GROUP(materials		FILES ${MATERIALS_SRCS})
SOURCE_GROUP(public			FILES ${PUBLIC_SRCS})
SOURCE_GROUP(tier0			FILES ${TIER0_SRCS})
SOURCE_GROUP(vgui			FILES ${CLIENT_SDK_VGUI_SRCS})

INCLUDE_DIRECTORIES(
	${DPB_SOURCE_DIR}/src/public/tier1
	${DPB_SOURCE_DIR}/src/cl_dll/sdk/vgui
	${CLIENT_BUILD_INC_CL_DLL}
	${CLIENT_BUILD_INC_GAME_SHARED}
	${DPB_SOURCE_DIR}/src/cl_dll
	${DPB_SOURCE_DIR}/src/public
	${DPB_SOURCE_DIR}/src/vgui2/include
	${DPB_SOURCE_DIR}/src/vgui2/controls
	${DPB_SOURCE_DIR}/src/game_shared
	${DPB_SOURCE_DIR}/src/cl_dll/game_controls
	${DPB_SOURCE_DIR}/src/dlls
	${DPB_SOURCE_DIR}/src/game_shared/hl2
	${DPB_SOURCE_DIR}/src/cl_dll/hl2_hud
)

ADD_DEFINITIONS(
	${SDK_BUILD_FLAGS}
	${SDK_BUILD_CLIENT_FLAGS}
	-Dfopen=dont_use_fopen
	-DNO_STRING_T
	-DCLIENT_DLL
	-D_WINDOWS
	-DVECTOR
	-Dstrncpy=use_Q_strncpy_instead
	-D_snprintf=use_Q_snprintf_instead
	-D_WIN32
	-DPROTECTED_THINGS_ENABLE
)

LINK_DIRECTORIES(
	${DPB_SOURCE_DIR}/src/lib/public
)

ADD_LIBRARY(client SHARED ${CLIENT_ALL_SRCS})

TARGET_LINK_LIBRARIES(client tier0 tier1 vstdlib nvtc vgui_controls winmm)

INSTALL_TARGETS(/bin client)
